// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmptyState > snapshot: basic empty state 1`] = `
<div
  class="rh-empty ant-empty ant-empty-normal rh-empty-state"
>
  <div
    class="rh-empty__image ant-empty-image"
  >
    <svg
      aria-hidden="true"
      class="rh-empty__art"
      height="96"
      viewBox="0 0 120 96"
      width="120"
    >
      <rect
        height="52"
        rx="16"
        width="84"
        x="18"
        y="24"
      />
      <path
        d="M30 42h60M38 56h44"
      />
      <circle
        cx="88"
        cy="30"
        r="10"
      />
    </svg>
  </div>
  <div
    class="rh-empty__description ant-empty-description"
  >
    У вас пока нет бронирований
  </div>
</div>
`;

exports[`EmptyState > snapshot: empty state with action 1`] = `
<div
  class="rh-empty ant-empty ant-empty-normal rh-empty-state"
>
  <div
    class="rh-empty__image ant-empty-image"
  >
    <svg
      aria-hidden="true"
      class="rh-empty__art"
      height="96"
      viewBox="0 0 120 96"
      width="120"
    >
      <rect
        height="52"
        rx="16"
        width="84"
        x="18"
        y="24"
      />
      <path
        d="M30 42h60M38 56h44"
      />
      <circle
        cx="88"
        cy="30"
        r="10"
      />
    </svg>
  </div>
  <div
    class="rh-empty__description ant-empty-description"
  >
    Ваш список избранного пуст
  </div>
  <div
    class="rh-empty__footer ant-empty-footer"
  >
    <button
      class="rh-btn inline-flex min-h-11 min-w-0 items-center justify-center gap-2 whitespace-nowrap rounded-rh-pill border border-transparent px-[22px] font-sans text-sm font-semibold leading-none tracking-normal transition duration-200 ease-in-out focus-visible:outline-none focus-visible:ring-4 focus-visible:ring-[rgba(15,118,110,0.16)] disabled:pointer-events-none disabled:opacity-55 rh-btn--primary bg-[linear-gradient(135deg,#0f766e,#0a5f59)] text-white shadow-rh-primary hover:-translate-y-px hover:shadow-[0_18px_30px_rgba(15,118,110,0.24)]"
      type="button"
    >
      Найти баню
    </button>
  </div>
</div>
`;
